2010-04-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: String data to be persisted in the database is escaped twice
	* Added feature: Integrate possibility to render HTML transformed values as markers

2010-04-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Confirmation mail on editing the profile is triggered also if not required

2010-04-27  Oliver Hader  <oliver@typo3.org>

	* Extended onEditBeforeSave event to forward all fields and values to be compared to the observer
	* Added feature: Integrate possibility to define additional local language files via TypoScript
	* Added feature: Integrate possibility to upload files
	* Fixed bug: Password value is shown on editing the profile

2010-04-21  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate saltedpasswords transformer
	* Fixed bug: Password transformer was not triggered due to wrong TypoScript configuration

2010-04-20  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate possibility to return cancel status by observers
	* Added feature: Integrate ext_autoload.php file for TYPO3 4.3 disposal
	* Cleanup: Added inline type hints

2010-04-15  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Wrong plugin registration lead to PHP fatal error
	* Information: Added short notice to add include statics after e.g. CSC

2009-05-08 Frank Naegler  <typo3@naegler.net>

	* added hook for logout session clearing 

2009-05-07 Frank Naegler  <typo3@naegler.net>

	* added support for static_info_tables 

2009-05-06 Frank Naegler  <typo3@naegler.net>

	* added option disableEnableFields to validators: uniqueInDb and uniqueInPid
	* added exception on reload after success
	* added LLL marker in error view
	* replace t3lib_div::linkThisScript() with typoLink_URL(array('parameter' => $GLOBALS['TSFE']->id)) in case of a realurl or t3lib_div bug
	
2009-03-24 Frank Naegler  <typo3@naegler.net>

	* added TS-Option aliasField
	* remove first parameter from __construct of stepManager