@@ -1,11 +1,12 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-04-21 16:40
+// This file was generated on 2010-04-29 18:33
 
 $extensionPath = t3lib_extMgm::extPath('feuserregister');
 return array(
 	'tx_feuserregister_userregistration_wizicon' => $extensionPath . 'class.tx_feuserregister_userregistration_wizicon.php',
 	'tx_feuserregister_commandresolver' => $extensionPath . 'classes/class.tx_feuserregister_commandresolver.php',
+	'tx_feuserregister_filemanager' => $extensionPath . 'classes/class.tx_feuserregister_filemanager.php',
 	'tx_feuserregister_localizationmanager' => $extensionPath . 'classes/class.tx_feuserregister_localizationmanager.php',
 	'tx_feuserregister_mailer' => $extensionPath . 'classes/class.tx_feuserregister_mailer.php',
 	'tx_feuserregister_registry' => $extensionPath . 'classes/class.tx_feuserregister_registry.php',
@@ -27,6 +28,7 @@ return array(
 	'tx_feuserregister_transformer_br2nl' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_br2nl.php',
 	'tx_feuserregister_transformer_date' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_date.php',
 	'tx_feuserregister_transformer_htmlspecialchars' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_htmlspecialchars.php',
+	'tx_feuserregister_transformer_image' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_image.php',
 	'tx_feuserregister_transformer_md5' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_md5.php',
 	'tx_feuserregister_transformer_nl2br' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_nl2br.php',
 	'tx_feuserregister_transformer_saltedpasswords' => $extensionPath . 'classes/transformer/class.tx_feuserregister_transformer_saltedpasswords.php',
@@ -42,6 +44,7 @@ return array(
 	'tx_feuserregister_validator_email' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_email.php',
 	'tx_feuserregister_validator_equalfield' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_equalfield.php',
 	'tx_feuserregister_validator_equalvalue' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_equalvalue.php',
+	'tx_feuserregister_validator_file' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_file.php',
 	'tx_feuserregister_validator_float' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_float.php',
 	'tx_feuserregister_validator_int' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_int.php',
 	'tx_feuserregister_validator_ip' => $extensionPath . 'classes/validators/class.tx_feuserregister_validator_ip.php',
